@@ -1,7 +1,7 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
     xmlns:five="http://namespaces.zope.org/five"
-    xmlns:theme="http://xmlns.racinet.org/zcml/designer-themes">
+    xmlns:theme="http://cps-cms.org/ns/zcml/designer-themes">
 
   <!-- Engine class registration -->
   <theme:engine class=".engine.lxmlengine.TwoPhaseLxmlEngine"/>
