@@ -4,7 +4,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
   <html xmlns="http://www.w3.org/1999/xhtml" lang="en"
-	xmlns:cps="http://xmlns.racinet.org/cps"
+	xmlns:cps="http://cps-cms.org/ns/theme"
         xml:lang="en">
     <head>
       
