@@ -1,5 +1,5 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:cps="http://xmlns.racinet.org/cps">
+      xmlns:cps="http://cps-cms.org/ns/theme">
 <head>
   <title>Sample theme page</title>
   <link rel="stylesheet" type="text/css" href="sample.css" />
