@@ -2,7 +2,7 @@
     xmlns="http://namespaces.zope.org/zope"
     xmlns:meta="http://namespaces.zope.org/meta">
 
-  <meta:directives namespace="http://xmlns.racinet.org/zcml/designer-themes">
+  <meta:directives namespace="http://cps-cms.org/ns/zcml/designer-themes">
 
     <meta:directive
        name="engine"
