@@ -1,5 +1,5 @@
 <body xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:cps="http://xmlns.racinet.org/cps">
+      xmlns:cps="http://cps-cms.org/ns/theme">
    <div cps:slot="slot1">
      <p cps:portlet="frame">
        <span cps:portlet="title">The title</span>
