@@ -1,4 +1,4 @@
 <?xml version="1.0"?>
-<document xmlns="http://xmlns.racinet.org/cps">
+<document xmlns="http://cps-cms.org/ns/theme">
   <options uri-absolute-path-rewrite="false"/>
 </document>
